2005-07-17 Adam Schreiber <sadam@clemson.edu>
	* libseahorse/seahorse-key-store.c:
        * libseahorse/seahorse-multi-source.c: Patch from Flavio daCosta
          (bug #310214)

2005-07-11 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Preferences(bug #309360)

2005-07-09 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for File Manager(bug #309360)

2005-07-04 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Text Editor(bug #309360)

2005-07-03  Adam Schreiber <sadam@clemson.edu>
    * src/seahorse-generate-select.glade: Fix problem where pressing
    <return> doesn't activate continue button.
    * help/C/seahorse.xml: Begin Documentation Overhaul (bug #309360)
    
2005-07-02  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Fix problem where pressing
    <return> doesn't activate search button. 
    Patch by Adam Schreiber (bug #157818)
    * libseahorse/seahorse-util.c: Make sure keyring backups are 
    only readable by current user. 
    Patch by Adam Schreiber (bug #308163)
    * libseahorse/seahorse-context.c: Added precondition check to 
    seahorse_context_get_key_source
    
2005-06-05  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-06-04  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus-ext/seahorse-nautilus.c: Don't show context menu
    items on application/x-desktop items. Fixes bug #305962
    
2005-05-20  Nate Nielsen  <nielsen@memberwebs.com>

    * seahorse-util.c: Always associate *.asc with application/pgp-keys 
    in the chooser dialog. The mime handling doesn't always work early
    enough.
    * bonobo/Seahorse_PGP_File_Listener.server.in.in:
    * plugins/nautilus-ext/seahorse-nautilus.c: Clean up nautilus menu items.
    
2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages