@@ -1,3 +1,8 @@
+2005-07-18  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * help/C/seahorse.xml: Removed portions of documentation which
+    don't apply to stable branch.
+    
 2005-07-17 Adam Schreiber <sadam@clemson.edu>
 	* libseahorse/seahorse-key-store.c:
         * libseahorse/seahorse-multi-source.c: Patch from Flavio daCosta
